--- a/assets/Applio.ipynb
+++ b/assets/Applio.ipynb
@@ -31,13 +31,13 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "NXXzfHi7Db-y"
+      },
       "source": [
         "### **Install Applio**\n",
         "If the runtime restarts, re-run the installation steps."
-      ],
-      "metadata": {
-        "id": "NXXzfHi7Db-y"
-      }
+      ]
     },
     {
       "cell_type": "code",
@@ -70,19 +70,18 @@
         "# @title Setup runtime environment\n",
         "from IPython.display import clear_output\n",
         "import codecs\n",
-        "\n",
-        "encoded_url = \"uggcf://tvguho.pbz/VNUvfcnab/Nccyvb/\"\n",
-        "decoded_url = codecs.decode(encoded_url, \"rot_13\")\n",
+        "import torch\n",
         "\n",
         "repo_name_encoded = \"Nccyvb\"\n",
         "repo_name = codecs.decode(repo_name_encoded, \"rot_13\")\n",
         "\n",
         "LOGS_PATH = f\"/content/{repo_name}/logs\"\n",
         "BACKUPS_PATH = f\"/content/drive/MyDrive/{repo_name}Backup\"\n",
+        "DJCM_PATH = f\"/content/{repo_name}/rvc/models/predictors\"\n",
         "\n",
         "%cd /content\n",
         "!git config --global advice.detachedHead false\n",
-        "!git clone --depth 1 {decoded_url} --branch 3.2.9 --single-branch\n",
+        "!git clone --depth 1 https://github.com/PhamHuynhAnh16/Applio-ONNX --branch djcm --single-branch\n",
         "%cd {repo_name}\n",
         "clear_output()\n",
         "\n",
@@ -91,6 +90,19 @@
         "!uv pip install -q -r requirements.txt\n",
         "!uv pip install -q ngrok jupyter-ui-poll\n",
         "!npm install -g -q localtunnel &> /dev/null\n",
+        "!wget https://huggingface.co/AnhP/DJCM-Test/resolve/main/model-10738.pt -O {DJCM_PATH}/model-10738.pt\n",
+        "\n",
+        "model = torch.load(DJCM_PATH + \"/model-10738.pt\", map_location=\"cpu\", weights_only=False)\n",
+        "\n",
+        "new_state_dict = {}\n",
+        "for k, v in model.state_dict().items():\n",
+        "    name = k.replace(\"module.\", \"\")\n",
+        "    new_state_dict[name] = v\n",
+        "\n",
+        "del new_state_dict[\"to_wav.istft.ola_window\"], new_state_dict[\"to_wav.istft.conv_real.weight\"], new_state_dict[\"to_wav.istft.conv_imag.weight\"]\n",
+        "del new_state_dict[\"to_spec.stft.conv_real.weight\"], new_state_dict[\"to_spec.stft.conv_imag.weight\"]\n",
+        "\n",
+        "torch.save(new_state_dict, DJCM_PATH + \"/djcm.pt\")\n",
         "\n",
         "!python core.py \"prerequisites\" --models \"True\" --pretraineds_hifigan \"True\"\n",
         "print(\"✅ Finished installing requirements!\")\n"
@@ -98,15 +110,21 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "### **Start Applio**"
-      ],
       "metadata": {
         "id": "IlM6ll0WDuOG"
-      }
+      },
+      "source": [
+        "### **Start Applio**"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "cellView": "form",
+        "id": "2miFQtlfiWy_"
+      },
+      "outputs": [],
       "source": [
         "# @title Sync with Google Drive\n",
         "# @markdown 💾 Run this cell to automatically Save/Load models from your mounted drive\n",
@@ -229,13 +247,7 @@
         "else:\n",
         "  print(\"❌ Drive is not mounted, skipping model syncing\")\n",
         "  print(\"To sync your models, first mount your Google Drive and re-run this cell\")"
-      ],
-      "metadata": {
-        "cellView": "form",
-        "id": "2miFQtlfiWy_"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
@@ -282,8 +294,8 @@
       "collapsed_sections": [
         "NXXzfHi7Db-y"
       ],
-      "provenance": [],
-      "private_outputs": true
+      "private_outputs": true,
+      "provenance": []
     },
     "kernelspec": {
       "display_name": "Python 3",
