--- a/assets/Applio.ipynb
+++ b/assets/Applio.ipynb
@@ -70,7 +70,6 @@
         "# @title Setup runtime environment\n",
         "from IPython.display import clear_output\n",
         "import codecs\n",
-        "import torch\n",
         "\n",
         "repo_name_encoded = \"Nccyvb\"\n",
         "repo_name = codecs.decode(repo_name_encoded, \"rot_13\")\n",
@@ -81,7 +80,7 @@
         "\n",
         "%cd /content\n",
         "!git config --global advice.detachedHead false\n",
-        "!git clone --depth 1 https://github.com/PhamHuynhAnh16/Applio-ONNX --branch djcm --single-branch\n",
+        "!git clone --depth 1 https://github.com/PhamHuynhAnh16/Applio-ONNX --branch djcm --single-branch ./{repo_name}\n",
         "%cd {repo_name}\n",
         "clear_output()\n",
         "\n",
@@ -90,19 +89,7 @@
         "!uv pip install -q -r requirements.txt\n",
         "!uv pip install -q ngrok jupyter-ui-poll\n",
         "!npm install -g -q localtunnel &> /dev/null\n",
-        "!wget https://huggingface.co/AnhP/DJCM-Test/resolve/main/model-10738.pt -O {DJCM_PATH}/model-10738.pt\n",
-        "\n",
-        "model = torch.load(DJCM_PATH + \"/model-10738.pt\", map_location=\"cpu\", weights_only=False)\n",
-        "\n",
-        "new_state_dict = {}\n",
-        "for k, v in model.state_dict().items():\n",
-        "    name = k.replace(\"module.\", \"\")\n",
-        "    new_state_dict[name] = v\n",
-        "\n",
-        "del new_state_dict[\"to_wav.istft.ola_window\"], new_state_dict[\"to_wav.istft.conv_real.weight\"], new_state_dict[\"to_wav.istft.conv_imag.weight\"]\n",
-        "del new_state_dict[\"to_spec.stft.conv_real.weight\"], new_state_dict[\"to_spec.stft.conv_imag.weight\"]\n",
-        "\n",
-        "torch.save(new_state_dict, DJCM_PATH + \"/djcm.pt\")\n",
+        "!wget https://huggingface.co/AnhP/DJCM-Test/resolve/main/djcm.pt -O {DJCM_PATH}/djcm.pt\n",
         "\n",
         "!python core.py \"prerequisites\" --models \"True\" --pretraineds_hifigan \"True\"\n",
         "print(\"✅ Finished installing requirements!\")\n"
